# CS401

./: .gitignore  class_note.md
HW1/: README.md  build.sh  main.py  out01210346.txt  run.sh
HW2/: Cargo.toml  Dockerfile  README.md  compose.yaml  k8s-tasks.yml  kubernetes-deployment-and-service.yml  measurement-update-k8s.csv  rest_client.py
HW2/ml_processor/: Cargo.toml
HW2/ml_processor/src/: checkpoint.rs  lib.rs  main.rs  url_file.rs
HW2/rest_client/: v0_B.html
HW2/rest_server/: Cargo.toml
HW2/rest_server/src/: actor.rs  lib.rs  main.rs  read_rules.rs  serve.rs  watch_file.rs
HW2/rest_server/src/serve/: error.rs
HW2/shared/: Cargo.toml
HW2/shared/src/: lib.rs
HW3/: README.md  compress.sh  dashboard.yml  function.py  outputkey-cm.yml  pyfile-cm.yml  runtime-dbg.yml  runtime-improved-cm.yml  runtime-improved.yml  serverless-deployment-course.yaml
HW3/dashboard/: Dockerfile  compose.yaml  mix.exs
HW3/dashboard/assets/css/: app.css
HW3/dashboard/config/: config.exs  dev.exs  runtime.exs  test.exs
HW3/dashboard/lib/dashboard/: application.ex  redis.ex
HW3/dashboard/lib/dashboard_web/: dashboard_live.ex  endpoint.ex  router.ex  telemetry.ex
HW3/dashboard/lib/dashboard_web/controllers/: page_controller.ex
HW3/dashboard/lib/dashboard_web/templates/layout/: root.html.heex
HW3/dashboard/lib/dashboard_web/views/: layout_view.ex
HW3/lucasmsp_code/: app.py  context.py  entrypoint.sh  usermodule.py
HW3/multi_file_mod/: main.py  reexport.py  stateful.py  stateless.py
HW3/runtime/: Dockerfile  README.md  compose.yaml  pyproject.toml
HW3/runtime/runtime/: __init__.py  main.py
