[workspace]
members = ["ml_processor", "rest_server"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
apriori = { git = "https://github.com/SichangHe/remykarem--apriori" }
bincode = "1.3"
log = "0.4"

[profile.release]
debug = true
