[package]
name = "ml_processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
apriori = { git = "https://github.com/SichangHe/remykarem--apriori" }
bincode = "1.3"
env_logger = "0.11"
log = "0.4"

[profile.release]
debug = true
