[package]
name = "ml_processor"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
apriori.workspace = true
bincode.workspace = true
env_logger = "0.11"
log.workspace = true

shared.workspace = true
