[package]
name = "rest_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
apriori.workspace = true
bincode.workspace = true
itertools = "0.12"
notify = { version = "6.1", default-features = false, features = [
    "macos_kqueue",
] }
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
tracing = "0.1"
tracing-subscriber = "0.3"

shared.workspace = true
