[package]
name = "rest_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
apriori.workspace = true
bincode.workspace = true
chrono = { version = "0.4", default-features = false }
itertools = "0.12"
notify = { version = "6.1", default-features = false, features = [
    "macos_kqueue",
] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

shared.workspace = true
